# proving-ground

./: .gitignore  Dockerfile  PARITY.md  README.md  docker-compose.yml  go.mod  pyproject.toml
cmd/proving-ground/: main.go
data/: history.jsonl  results.html  results.json
data/profiles/: engram-analyst-group.txt  field-marshall.txt  grace-hopper.txt  qa-army-group.txt
docs/: interpreting.md  suite-v1-results.md  using.md  why.md
docs/assets/: VISUAL-IDENTITY.md
docs/plans/: 2026-03-30-benchmark-design.md  2026-03-30-proving-ground-implementation.md
internal/config/: config.go  config_test.go
internal/history/: history.go  history_test.go
internal/orchestrator/: orchestrator.go  orchestrator_test.go
internal/profiles/: profiles.go  profiles_test.go
internal/results/: color_test.go  html.go  report.go  report_test.go  svg.go  svg_test.go
internal/runner/: runner.go  runner_test.go
internal/scoring/: automated.go  automated_test.go  judge.go  judge_selfawareness_test.go  judge_test.go  radon.go  radon_test.go
internal/tasks/: tasks.go  tasks_test.go
profiles/: light.txt
prompts/: judge-rubric.md
src/: cli.py  config.py  history.py  orchestrator.py  profiles.py  results.py  runner.py  tasks.py
src/scoring/: automated.py  judge.py
tasks/tier1/: task-1-1-the-parser.md  (+2 more)
templates/: results.html.j2  results.html.tmpl
testdata/: README.md  run-parity.sh
tests/: test_cli.py  test_history.py  test_orchestrator.py  test_profiles.py  test_results.py  test_runner.py  test_scoring_automated.py  test_scoring_judge.py  test_tasks.py
(+26 files in other folders)
