[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "proving-ground"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "anthropic>=0.40",
    "radon>=6.0",
    "jinja2>=3.1",
]

[project.scripts]
proving-ground = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
